fix: layout alignment issues on mobile

--- a/styles/contributions.module.scss
+++ b/styles/contributions.module.scss
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 1rem 0;
   overflow-x: auto;
   max-width: 100%;
